[package]
name = "ca-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
ukeyskf = { version = "0.1.0", path = "../crate-ukey-skf" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.0", features = [] }
base64 = "0.22.1"
serde_json = "1.0.133"
reqwest = "0.12.9"
image = "0.25.5"
hmac = "0.12.1"
jyframe = { version = "0.1.0", path = "../crate-frame" }
chrono = "0.4.38"
regex = "1.11.1"
uuid = { version = "1.11.0", features = ["v4"] }
sm3 = "0.4.2"
hex = "0.4.3"
